fixed banner size on mobile

--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -61,6 +61,10 @@
 			}
 		}
 
+		.banner {
+			width: 100%;
+		}
+
 		.content {
 			border-style: solid;
 			border-color: _palette(border);
